# mc_sync_server

./: CMakeLists.txt  CMakeSettings.json  README.md
mc_sync_server/: CMakeLists.txt  mc_sync_server.cpp  mc_sync_server.h  myexceptions.h  serverConnection.cpp  serverConnection.h
